learn/mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mongo-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    rules:
        -   host: mongo.sylius.localhost
            http:
                paths:
                    -   pathType: Prefix
                        path: /
                        backend:
                            service:
                                name: mongo-express-service
                                port:
                                    number: 80
